--- a/style.css
+++ b/style.css
@@ -1,27 +1,90 @@
+html {
+  height: 100%;
+  width: 100%;
+}
+
+
 body {
-    font-family: Arial, sans-serif;
+  color: black; /* default color */
 }
 
-input {
-    width: 300px;
-    margin-bottom: 10px;
-}
 
-button {
-    margin-right: 10px;
-}
-
-2
 body {
-    font-family: Arial, sans-serif;
+  background: whitesmoke;
+  width: 100vw;
+  height: 100vh;
 }
 
-textarea {
-    width: 300px;
-    height: 100px;
-    margin-bottom: 10px;
+.calc {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding: 0.3rem;
+  width: auto;
 }
 
-button {
-    margin-top: 10px;
+.calc-botoes {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 2px;
 }
+
+.calc-botoes button {
+  width: 5rem;
+  height: 3.5rem;
+  border: none;
+}
+
+button:hover {
+  background-color: #ccc;
+}
+
+.botoes-numericos {
+  font-size: large;
+  font-weight: bold;
+}
+
+.bgWhite {
+  background-color: white;
+}
+
+.btnIgual {
+  background-color: #95bff5; 
+}
+
+.btnIgual:hover {
+  background-color: #75a9ee; 
+}
+
+.BtnsSinais {
+  font-size: 20px;
+}
+
+.scroll {
+  width: 20rem;
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
+.display {
+  font-weight: bold;
+  width: 100%;
+  text-align: end;
+  font-size: 35px;
+  padding: 15px 5px;
+}
+
+@media(max-width: 600px) {
+  button {
+    width: 4rem;
+  }
+
+  .scroll {
+    width: 16rem;
+  }
+}
+
+@media(max-width: 300px) {
+  button {
+    width: 3rem;
+
